# NDKDemo

./: local.properties  settings.gradle
cmake_demo/: build.gradle
cmake_demo/src/main/cpp/: CMakeLists.txt  aiengine.cpp
cmake_demo/src/main/java/com/example/myapplication/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
ndk_build_demo/: build.gradle
ndk_build_demo/src/main/java/com/example/demo/: MainActivity.java
ndk_build_demo/src/main/jni/: Application.mk  com_example_demo_MainActivity.h  native-lib.cpp
